# region-detection-rate

./: CMakeLists.txt  LICENSE  README.md
examples/decision_making/: mapping.txt
examples/from_datasets/: mapping.txt
examples/theoretic/: mapping.txt
src/: eval.cpp  measures.cpp  measures.h
